--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,21 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 238, 239, 240;
   --background-end-rgb: 255, 255, 255;
+  --color-secondary: #036ea4;
+  --color-primary: #071c44;
+  --color-black: #221f1f;
+  --transition: all ease-in-out 0.3s;
+  --extra-extra_small: 374px;
+  --extra-small: 425px;
+  --small: 576px;
+  --medium: 768px;
+  --large: 992px;
+  --extra-large: 1200px;
+  --extra-extra-large: 1400px;
+  --extra-extra-extra-large: 1600px;
+  --border-radius: 15px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,11 +30,45 @@
 }
 
 body {
+  font-weight: 400;
   color: rgb(var(--foreground-rgb));
+  padding: 0;
+  margin: 0;
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+.container {
+  max-width: 1623px;
+  padding: 0 40px;
+  margin: 0 auto;
+  @media (max-width: 1400px) {
+    max-width: 1280px;
+  }
+  @media (max-width: 992px) {
+    padding: 0 30px;
+  }
+  @media (max-width: 576px) {
+    padding: 0 20px;
+  }
+}
+
+.swiper-pagination-bullet{
+  background-color: #d2d2d2 !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #007aff !important;
+}
+
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
